Mon Jun 18 21:33:54 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/auto_run_tests.lst: Added the Big_Reply tests to the nightly
	  builds.  

Mon Jun 18 16:20:51 2001  Steve Huston  <shuston@riverace.com>

        * tests/Thread_Manager_Test.cpp: Added a new function,
          test_task_record_keeping(), that tests task-related record
          keeping in the ACE_Thread_Manager. Motivated by a report of
          ACE_Thread_Manager::task_all_list() not working correctly.

Mon Jun 18 15:29:38 2001  Steve Huston  <shuston@riverace.com>

        * ace/ace.icc: Replace Obstack.cpp with Obchunk.cpp; added
          Obchunk.h

        * ace/Thread_Manager.cpp (task_all_list): Don't put duplicate
          ACE_Task_Base pointers in the returned list.

        * ace/Malloc_T.cpp (ACE_Malloc<>::ACE_Malloc (3 args): Add \n
          to the failure ACE_ERROR statement.

        * tests/Refcounted_Auto_Ptr_Test.cpp: Print the instance count
          of the refcounted variable before asserting on it in order to
          leave interesting info in the log if it bombs.

Mon Jun 18 10:06:37 2001  Chris Cleeland  <cleeland_c@ociweb.com>

	* etc/tao_ssliop.doxygen: New configuration file for
	SSLIOP-related files.
	
	* bin/generate_doxygen.pl: Added new SSLIOP configuration file to
	the list of things to be documented for TAO.

Sun Jun 17 21:26:27 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Message_Block.i: Fixed Fuzz errors.

Sat Jun 17 17:33:36 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/CDR_Base.cpp (grow): Cleared the DONT_DELETE flag of the
	  message block whose data block is expanded.

	* ace/CDR_Stream.h:
	* ace/CDR_Stream.cpp: Added a new method clone_from () in the
	  ACE_InputCDR class. This method is used in the bug #575 fix.

Sun Jun 17 17:11:36 2001  Krishnakumar B  <kitty@cs.wustl.edu>

        * ace/Timer_Queue_Adapters.cpp (schedule):

          Fixed a warning by reorganizing return statement.
