@@ -1,3 +1,10 @@
+Tue Jun 19 07:20:56 2001  Chad Elliott  <elliott_c@ociweb.com>
+
+        * ace/INET_Addr.cpp:
+
+          Set the inet_addr_.sin_family to AF_INET when the ACE_Addr type is
+          set to AF_INET.
+
 Mon Jun 18 21:33:54 2001  Balachandran Natarajan  <bala@cs.wustl.edu>
 
 	* bin/auto_run_tests.lst: Added the Big_Reply tests to the nightly
